--- a/manual/HedgesOlkin85.html
+++ b/manual/HedgesOlkin85.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>R: Effects of Open Education Reported by Hedges and Olkin (1985)</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="R.css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Effects of Open Education Reported by Hedges and Olkin (1985)</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="R.css" />
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/styles/github.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/highlight.min.js"></script>
@@ -9,7 +8,7 @@
 <script>hljs.initHighlightingOnLoad();</script>
 </head><body>
 
-<table width="100%" summary="page for HedgesOlkin85 {metaSEM}"><tr><td>HedgesOlkin85 {metaSEM}</td><td align="right">R Documentation</td></tr></table>
+<table width="100%" summary="page for HedgesOlkin85 {metaSEM}"><tr><td>HedgesOlkin85 {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
 <h2>Effects of Open Education Reported by Hedges and Olkin (1985)
 </h2>
@@ -33,15 +32,15 @@
 <dl>
 <dt>study</dt><dd><p>Study number</p>
 </dd>
-<dt>d_att</dt><dd><p>Standardized mean difference on <EM>attitude</EM></p>
+<dt>d_att</dt><dd><p>Standardized mean difference on <em>attitude</em></p>
 </dd>
-<dt>d_ach</dt><dd><p>Standardized mean difference on <EM>achievement</EM></p>
+<dt>d_ach</dt><dd><p>Standardized mean difference on <em>achievement</em></p>
 </dd>
-<dt>var_att</dt><dd><p>Sampling variance of the effect size of <EM>attitude</EM></p>
+<dt>var_att</dt><dd><p>Sampling variance of the effect size of <em>attitude</em></p>
 </dd>
 <dt>cov_att_ach</dt><dd><p>Sampling covariance between the effect sizes</p>
 </dd>
-<dt>var_ach</dt><dd><p>Sampling variance of the effect size of <EM>achievement</EM></p>
+<dt>var_ach</dt><dd><p>Sampling variance of the effect size of <em>achievement</em></p>
 </dd>
 </dl>
 
@@ -49,13 +48,13 @@
 
 <h3>Source</h3>
 
-<p>Hedges, L. V., &amp; Olkin, I. (1985). <EM>Statistical methods for meta-analysis.</EM> Orlando, FL: Academic Press. 
+<p>Hedges, L. V., &amp; Olkin, I. (1985). <em>Statistical methods for meta-analysis.</em> Orlando, FL: Academic Press. 
 </p>
 
 
 <h3>References</h3>
 
-<p>Cheung, M. W.-L. (2010). Fixed-effects meta-analyses as multiple-group structural equation models. <EM>Structural Equation Modeling</EM>, <B>17</B>, 481-509.
+<p>Cheung, M. W.-L. (2010). Fixed-effects meta-analyses as multiple-group structural equation models. <em>Structural Equation Modeling</em>, <b>17</b>, 481-509.
 </p>
 
 
@@ -103,5 +102,5 @@ summary( meta(y=cbind(d_att, d_ach),
 </code></pre>
 
 
-<hr><div align="center">[Package <em>metaSEM</em> version 0.9-2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
 </body></html>
