--- a/manual/Mak09.html
+++ b/manual/Mak09.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>R: Eight studies from Mak et al. (2009)</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="R.css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Eight studies from Mak et al. (2009)</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="R.css" />
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/styles/github.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/highlight.min.js"></script>
@@ -9,7 +8,7 @@
 <script>hljs.initHighlightingOnLoad();</script>
 </head><body>
 
-<table width="100%" summary="page for Mak09 {metaSEM}"><tr><td>Mak09 {metaSEM}</td><td align="right">R Documentation</td></tr></table>
+<table width="100%" summary="page for Mak09 {metaSEM}"><tr><td>Mak09 {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
 <h2>Eight studies from Mak et al. (2009)</h2>
 
@@ -59,16 +58,16 @@
 <p>Mak, A., Cheung, M. W.-L., Ho, R. C. M., Cheak, A. A. C., &amp; Lau,
 C. S. (2009). Bisphosphonate and atrial fibrillation: Bayesian
 meta-analyses of randomized controlled trials and observational
-studies. <EM>BMC Musculoskeletal Disorders</EM>,
-<B>10(113)</B>. doi:10.1186/1471-2474-10-113 Available at <a href="http://www.biomedcentral.com/1471-2474/10/113">http://www.biomedcentral.com/1471-2474/10/113</a>.
+studies. <em>BMC Musculoskeletal Disorders</em>,
+<b>10(113)</b>. doi:10.1186/1471-2474-10-113 Available at <a href="http://www.biomedcentral.com/1471-2474/10/113">http://www.biomedcentral.com/1471-2474/10/113</a>.
 </p>
 
 
 <h3>References</h3>
 
 <p>Cheung, M. W.-L., Ho, R. C. M., Lim, Y., &amp; Mak, A. (2012). Conducting a
-meta-analysis: Basics and good practices. <EM>International Journal
-of Rheumatic Diseases</EM>, <B>15(2)</B>, 129-135. doi: 10.1111/j.1756-185X.2012.01712.x
+meta-analysis: Basics and good practices. <em>International Journal
+of Rheumatic Diseases</em>, <b>15(2)</b>, 129-135. doi: 10.1111/j.1756-185X.2012.01712.x
 </p>
 
 
@@ -160,5 +159,5 @@ summary( meta(y=yi, v=vi, x=age.mean, data=Mak09) )
 </code></pre>
 
 
-<hr><div align="center">[Package <em>metaSEM</em> version 0.9-2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
 </body></html>
