--- a/manual/asyCov.html
+++ b/manual/asyCov.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>R: Compute Asymptotic Covariance Matrix of a...</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="R.css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Compute Asymptotic Covariance Matrix of a...</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="R.css" />
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/styles/github.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/highlight.min.js"></script>
@@ -9,7 +8,7 @@
 <script>hljs.initHighlightingOnLoad();</script>
 </head><body>
 
-<table width="100%" summary="page for asyCov {metaSEM}"><tr><td>asyCov {metaSEM}</td><td align="right">R Documentation</td></tr></table>
+<table width="100%" summary="page for asyCov {metaSEM}"><tr><td>asyCov {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
 <h2>Compute Asymptotic Covariance Matrix of a Correlation/Covariance Matrix
 </h2>
@@ -106,7 +105,7 @@ is a stacked matrix. </p>
 
 <h3>References</h3>
 
-<p>Cheung, M. W.-L., &amp; Chan, W. (2004). Testing dependent correlation coefficients via structural equation modeling. <EM>Organizational Research Methods</EM>, <B>7</B>, 206-223. 
+<p>Cheung, M. W.-L., &amp; Chan, W. (2004). Testing dependent correlation coefficients via structural equation modeling. <em>Organizational Research Methods</em>, <b>7</b>, 206-223. 
 </p>
 
 
@@ -117,9 +116,9 @@ asyCov(C1, n=100)
 </code></pre>
 
 <pre><code>##              x2x1         x3x1        x3x2
-## x2x1 0.0056818219 0.0006363572 0.002590906
-## x3x1 0.0006363572 0.0071272787 0.003818178
-## x3x2 0.0025909062 0.0038181776 0.009309103
+## x2x1 0.0056818277 0.0006363694 0.002590911
+## x3x1 0.0006363694 0.0071272877 0.003818199
+## x3x2 0.0025909111 0.0038181992 0.009309098
 </code></pre>
 
 <pre><code class="r">## Data with missing values
@@ -132,9 +131,9 @@ asyCov(list(C1,C2,C3), n=c(100,50,50), dropNA=TRUE, as.matrix=FALSE)
 
 <pre><code>## [[1]]
 ##              x2x1         x3x1        x3x2
-## x2x1 0.0056818143 0.0006363488 0.002590897
-## x3x1 0.0006363488 0.0071272639 0.003818169
-## x3x2 0.0025908973 0.0038181689 0.009309094
+## x2x1 0.0056818293 0.0006363568 0.002590916
+## x3x1 0.0006363568 0.0071272724 0.003818173
+## x3x2 0.0025909162 0.0038181729 0.009309092
 ## 
 ## [[2]]
 ##            x2x1
@@ -142,7 +141,7 @@ asyCov(list(C1,C2,C3), n=c(100,50,50), dropNA=TRUE, as.matrix=FALSE)
 ## 
 ## [[3]]
 ##            x2x1
-## x2x1 0.01880814
+## x2x1 0.01880815
 </code></pre>
 
 <pre><code class="r">## Output is a stacked matrix of asymptotic covariance matrices
@@ -150,10 +149,10 @@ asyCov(list(C1,C2), n=c(100,50), as.matrix=TRUE)
 </code></pre>
 
 <pre><code>##      cov(x2x1_x2x1) cov(x3x1_x2x1) cov(x3x2_x2x1) cov(x3x1_x3x1)
-## [1,]    0.005681821   0.0006363485    0.002590896    0.007127279
+## [1,]    0.005681823   0.0006363791     0.00259093     0.00712727
 ## [2,]    0.014399992             NA             NA             NA
 ##      cov(x3x2_x3x1) cov(x3x2_x3x2)
-## [1,]    0.003818179    0.009309097
+## [1,]    0.003818184    0.009309084
 ## [2,]             NA             NA
 </code></pre>
 
@@ -162,10 +161,10 @@ asyCov(list(C3,C3), n=c(100,50), as.matrix=TRUE)
 </code></pre>
 
 <pre><code>##      cov(x2x1_x2x1)
-## [1,]    0.009309085
-## [2,]    0.018808220
+## [1,]    0.009309112
+## [2,]    0.018808176
 </code></pre>
 
 
-<hr><div align="center">[Package <em>metaSEM</em> version 0.9-2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
 </body></html>
