--- a/manual/meta.html
+++ b/manual/meta.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>R: Univariate and Multivariate Meta-Analysis with Maximum...</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="R.css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Univariate and Multivariate Meta-Analysis with Maximum...</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
 
-<table width="100%" summary="page for meta {metaSEM}"><tr><td>meta {metaSEM}</td><td align="right">R Documentation</td></tr></table>
+<table width="100%" summary="page for meta {metaSEM}"><tr><td>meta {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
 <h2>Univariate and Multivariate Meta-Analysis with Maximum
 Likelihood Estimation
@@ -234,25 +233,25 @@ effect sizes will have little impact on the analysis.
 
 <p>Cheung, M. W.-L. (2008). A model for integrating fixed-, random-, and
 mixed-effects meta-analyses into structural equation
-modeling. <EM>Psychological Methods</EM>, <B>13</B>, 182-202.
+modeling. <em>Psychological Methods</em>, <b>13</b>, 182-202.
 </p>
 <p>Cheung, M. W.-L. (2009). Constructing approximate confidence intervals
-for parameters with structural equation models. <EM>Structural
-Equation Modeling</EM>, <B>16</B>, 267-294.
+for parameters with structural equation models. <em>Structural
+Equation Modeling</em>, <b>16</b>, 267-294.
 </p>
-<p>Cheung, M. W.-L. (2013). Multivariate meta-analysis as structural equation models. <EM>Structural Equation Modeling</EM>, <B>20</B>, 429-454.
+<p>Cheung, M. W.-L. (2013). Multivariate meta-analysis as structural equation models. <em>Structural Equation Modeling</em>, <b>20</b>, 429-454.
 </p>
 <p>Hardy, R. J., &amp; Thompson, S. G. (1996). A likelihood approach to
-meta-analysis with random effects. <EM>Statistics in Medicine</EM>,
-<B>15</B>, 619-629.
+meta-analysis with random effects. <em>Statistics in Medicine</em>,
+<b>15</b>, 619-629.
 </p>
 <p>Neale, M. C., &amp; Miller, M. B. (1997). The use of likelihood-based
-confidence intervals in genetic models. <EM>Behavior Genetics</EM>,
-<B>27</B>, 113-120.
+confidence intervals in genetic models. <em>Behavior Genetics</em>,
+<b>27</b>, 113-120.
 </p>
-<p>Raudenbush, S. W. (2009). Analyzing effect sizes: random effects models. In H. M. Cooper, L. V. Hedges, &amp; J. C. Valentine (Eds.), <EM>The handbook of research synthesis and meta-analysis</EM> (2nd ed., pp. 295-315). New York: Russell Sage Foundation.
+<p>Raudenbush, S. W. (2009). Analyzing effect sizes: random effects models. In H. M. Cooper, L. V. Hedges, &amp; J. C. Valentine (Eds.), <em>The handbook of research synthesis and meta-analysis</em> (2nd ed., pp. 295-315). New York: Russell Sage Foundation.
 </p>
-<p>Xiong, C., Miller, J. P., &amp; Morris, J. C. (2010). Measuring study-specific heterogeneity in meta-analysis: application to an antecedent biomarker study of alzheimer's disease. <EM>Statistics in Biopharmaceutical Research</EM>, <B>2(3)</B>, 300-309. doi:10.1198/sbr.2009.0067
+<p>Xiong, C., Miller, J. P., &amp; Morris, J. C. (2010). Measuring study-specific heterogeneity in meta-analysis: application to an antecedent biomarker study of alzheimer's disease. <em>Statistics in Biopharmaceutical Research</em>, <b>2(3)</b>, 300-309. doi:10.1198/sbr.2009.0067
 </p>
 
 
@@ -262,5 +261,5 @@ confidence intervals in genetic models. <EM>Behavior Genetics</EM>,
 <code><a href="Berkey98.html">Berkey98</a></code>, <code><a href="wvs94a.html">wvs94a</a></code>
 </p>
 
-<hr><div align="center">[Package <em>metaSEM</em> version 0.9-2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
 </body></html>
