--- a/manual/meta2semPlot.html
+++ b/manual/meta2semPlot.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>R: Convert 'metaSEM' objects into 'semPlotModel' objects for...</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="R.css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Convert 'metaSEM' objects into 'semPlotModel' objects for...</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
 
-<table width="100%" summary="page for meta2semPlot {metaSEM}"><tr><td>meta2semPlot {metaSEM}</td><td align="right">R Documentation</td></tr></table>
+<table width="100%" summary="page for meta2semPlot {metaSEM}"><tr><td>meta2semPlot {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
 <h2>
 Convert <code>metaSEM</code> objects into <code>semPlotModel</code> objects for plotting
@@ -84,5 +83,5 @@ in plotting. If <code>RAM</code>, the RAM notations are used in plotting.
 <code><a href="Digman97.html">Digman97</a></code>, <code><a href="Hunter83.html">Hunter83</a></code>
 </p>
 
-<hr><div align="center">[Package <em>metaSEM</em> version 0.9-2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
 </body></html>
