--- a/manual/Becker83.html
+++ b/manual/Becker83.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>R: Studies on Sex Differences in Conformity Reported by Becker...</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="R.css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Studies on Sex Differences in Conformity Reported by Becker...</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="R.css" />
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/styles/github.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/highlight.min.js"></script>
@@ -9,7 +8,7 @@
 <script>hljs.initHighlightingOnLoad();</script>
 </head><body>
 
-<table width="100%" summary="page for Becker83 {metaSEM}"><tr><td>Becker83 {metaSEM}</td><td align="right">R Documentation</td></tr></table>
+<table width="100%" summary="page for Becker83 {metaSEM}"><tr><td>Becker83 {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
 <h2>Studies on Sex Differences in Conformity Reported by Becker (1983)
 </h2>
@@ -49,16 +48,16 @@ paradigm reported by Becker (1983).
 <h3>Source</h3>
 
 <p>Becker, B. J. (1983, April). Influence again: A comparison of methods
-for meta-analysis. <EM>Paper presented at the annual meeting of the
-American Educational Research Association, Montreal.</EM>
+for meta-analysis. <em>Paper presented at the annual meeting of the
+American Educational Research Association, Montreal.</em>
 </p>
-<p>Hedges, L. V., &amp; Olkin, I. (1985). <EM>Statistical methods for meta-analysis.</EM> Orlando, FL: Academic Press. 
+<p>Hedges, L. V., &amp; Olkin, I. (1985). <em>Statistical methods for meta-analysis.</em> Orlando, FL: Academic Press. 
 </p>
 
 
 <h3>References</h3>
 
-<p>Cheung, M. W.-L. (2010). Fixed-effects meta-analyses as multiple-group structural equation models. <EM>Structural Equation Modeling</EM>, <B>17</B>, 481-509.
+<p>Cheung, M. W.-L. (2010). Fixed-effects meta-analyses as multiple-group structural equation models. <em>Structural Equation Modeling</em>, <b>17</b>, 481-509.
 </p>
 
 
@@ -138,5 +137,5 @@ summary( meta(y=di, v=vi, x=log(items), data=Becker83) )
 </code></pre>
 
 
-<hr><div align="center">[Package <em>metaSEM</em> version 0.9-2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
 </body></html>
