--- a/manual/Cooper03.html
+++ b/manual/Cooper03.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>R: Selected effect sizes from Cooper et al. (2003)</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="R.css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Selected effect sizes from Cooper et al. (2003)</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="R.css" />
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/styles/github.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/highlight.min.js"></script>
@@ -9,7 +8,7 @@
 <script>hljs.initHighlightingOnLoad();</script>
 </head><body>
 
-<table width="100%" summary="page for Cooper03 {metaSEM}"><tr><td>Cooper03 {metaSEM}</td><td align="right">R Documentation</td></tr></table>
+<table width="100%" summary="page for Cooper03 {metaSEM}"><tr><td>Cooper03 {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
 <h2>Selected effect sizes from Cooper et al. (2003)</h2>
 
@@ -46,15 +45,15 @@
 
 <h3>Source</h3>
 
-<p>Cooper, H., Valentine, J. C., Charlton, K., &amp; Melson, A. (2003). The Effects of Modified School Calendars on Student Achievement and on School and Community Attitudes. <EM>Review of Educational Research</EM>, <B>73(1)</B>, 1-52. doi:10.3102/00346543073001001
+<p>Cooper, H., Valentine, J. C., Charlton, K., &amp; Melson, A. (2003). The Effects of Modified School Calendars on Student Achievement and on School and Community Attitudes. <em>Review of Educational Research</em>, <b>73(1)</b>, 1-52. doi:10.3102/00346543073001001
 </p>
 
 
 <h3>References</h3>
 
 <p>Konstantopoulos, S. (2011). Fixed effects and variance components
-estimation in three-level meta-analysis. <EM>Research Synthesis
-Methods</EM>, <B>2</B>, 61-76. doi:10.1002/jrsm.35
+estimation in three-level meta-analysis. <em>Research Synthesis
+Methods</em>, <b>2</b>, 61-76. doi:10.1002/jrsm.35
 </p>
 
 
@@ -126,7 +125,7 @@ summary( meta3(y=y, v=v, cluster=District, data=Cooper03,
 ## I2_2 (Typical v: arithmetic mean) 0.11350  0.28177 0.5237
 ## ICC_2 (tau^2/(tau^2+tau^3))       0.13102  0.36273 0.7015
 ## I2_3 (Typical v: Q statistic)     0.27937  0.60429 0.8454
-## I2_3 (Typical v: harmonic mean)   0.28019  0.60565 0.8463
+## I2_3 (Typical v: harmonic mean)   0.28015  0.60565 0.8463
 ## I2_3 (Typical v: arithmetic mean) 0.21832  0.49502 0.7625
 ## ICC_3 (tau^3/(tau^2+tau^3))       0.29847  0.63727 0.8690
 ## 
@@ -294,7 +293,7 @@ summary( reml3(y=y, v=v, cluster=District, x=scale(Year, scale=FALSE),
 ## Coefficients:
 ##        Estimate Std.Error   lbound   ubound z value Pr(&gt;|z|)
 ## Tau2_2 0.032650        NA 0.016227 0.062623      NA       NA
-## Tau2_3 0.072266        NA 0.024423 0.243059      NA       NA
+## Tau2_3 0.072266        NA 0.024419 0.243059      NA       NA
 ## 
 ## Number of studies (or clusters): 56
 ## Number of observed statistics: 54
@@ -322,10 +321,10 @@ summary( meta3X(y=y, v=v, cluster=District, x2=scale(Year_MCAR, scale=FALSE),
 ## 95% confidence intervals: z statistic approximation
 ## Coefficients:
 ##             Estimate  Std.Error     lbound     ubound z value Pr(&gt;|z|)   
-## Intercept  0.1794793  0.0802399  0.0222120  0.3367466  2.2368 0.025300 * 
-## SlopeX2_1  0.0051003  0.0085321 -0.0116223  0.0218229  0.5978 0.549985   
+## Intercept  0.1794793  0.0802398  0.0222121  0.3367465  2.2368 0.025300 * 
+## SlopeX2_1  0.0051003  0.0085321 -0.0116222  0.0218229  0.5978 0.549984   
 ## Tau2_2     0.0329375  0.0111612  0.0110619  0.0548131  2.9511 0.003167 **
-## Tau2_3     0.0564661  0.0300325 -0.0023965  0.1153288  1.8802 0.060085 . 
+## Tau2_3     0.0564661  0.0300309 -0.0023934  0.1153257  1.8803 0.060072 . 
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
 ## 
@@ -345,5 +344,5 @@ summary( meta3X(y=y, v=v, cluster=District, x2=scale(Year_MCAR, scale=FALSE),
 </code></pre>
 
 
-<hr><div align="center">[Package <em>metaSEM</em> version 0.9-2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
 </body></html>
