--- a/manual/Hox02.html
+++ b/manual/Hox02.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>R: Simulated Effect Sizes Reported by Hox (2002)</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="R.css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Simulated Effect Sizes Reported by Hox (2002)</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="R.css" />
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/styles/github.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/highlight.min.js"></script>
@@ -9,7 +8,7 @@
 <script>hljs.initHighlightingOnLoad();</script>
 </head><body>
 
-<table width="100%" summary="page for Hox02 {metaSEM}"><tr><td>Hox02 {metaSEM}</td><td align="right">R Documentation</td></tr></table>
+<table width="100%" summary="page for Hox02 {metaSEM}"><tr><td>Hox02 {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
 <h2>Simulated Effect Sizes Reported by Hox (2002)</h2>
 
@@ -45,13 +44,13 @@ continuous study characteristic reported by Hox (2002).
 
 <h3>Source</h3>
 
-<p>Hox, J. J. (2002). <EM>Multilevel analysis: Techniques and applications.</EM> Mahwah, N.J.: Lawrence Erlbaum Associates.
+<p>Hox, J. J. (2002). <em>Multilevel analysis: Techniques and applications.</em> Mahwah, N.J.: Lawrence Erlbaum Associates.
 </p>
 
 
 <h3>References</h3>
 
-<p>Cheung, M. W.-L. (2008). A model for integrating fixed-, random-, and mixed-effects meta-analyses into structural equation modeling. <EM>Psychological Methods</EM>, <B>13</B>, 182-202. 
+<p>Cheung, M. W.-L. (2008). A model for integrating fixed-, random-, and mixed-effects meta-analyses into structural equation modeling. <em>Psychological Methods</em>, <b>13</b>, 182-202. 
 </p>
 
 
@@ -73,7 +72,7 @@ summary( meta(y=yi, v=vi, data=Hox02, I2=c(&quot;I2q&quot;, &quot;I2hm&quot;), i
 ## Coefficients:
 ##            Estimate Std.Error   lbound   ubound z value Pr(&gt;|z|)
 ## Intercept1 0.579035        NA 0.364949 0.800770      NA       NA
-## Tau2_1_1   0.131520        NA 0.032359 0.365417      NA       NA
+## Tau2_1_1   0.131520        NA 0.032355 0.365412      NA       NA
 ## 
 ## Q statistic on the homogeneity of effect sizes: 49.5852
 ## Degrees of freedom of the Q statistic: 19
@@ -81,8 +80,8 @@ summary( meta(y=yi, v=vi, data=Hox02, I2=c(&quot;I2q&quot;, &quot;I2hm&quot;), i
 ## 
 ## Heterogeneity indices (I2) and their 95% likelihood-based CIs:
 ##                                 lbound Estimate ubound
-## Intercept1: I2 (Q statistic)   0.27487  0.60780 0.8113
-## Intercept1: I2 (harmonic mean) 0.27575  0.60885 0.8119
+## Intercept1: I2 (Q statistic)   0.27485  0.60780 0.8113
+## Intercept1: I2 (harmonic mean) 0.27572  0.60885 0.8119
 ## 
 ## Number of studies (or clusters): 20
 ## Number of observed statistics: 20
@@ -142,7 +141,7 @@ summary( meta(y=yi, v=vi, x=weeks, data=Hox02, intervals.type=&quot;LB&quot;,
 ##               Estimate Std.Error      lbound      ubound z value Pr(&gt;|z|)
 ## Intercept1 -2.1356e-01        NA -6.1977e-01  1.8104e-01      NA       NA
 ## Slope1_1    1.3866e-01        NA  7.4635e-02  2.0695e-01      NA       NA
-## Tau2_1_1    2.3252e-02        NA  9.3070e-09  1.3790e-01      NA       NA
+## Tau2_1_1    2.3252e-02        NA  9.9780e-11  1.3790e-01      NA       NA
 ## 
 ## Q statistic on the homogeneity of effect sizes: 49.5852
 ## Degrees of freedom of the Q statistic: 19
@@ -237,7 +236,7 @@ summary( reml(y=yi, v=vi, x=weeks, intervals.type=&quot;LB&quot;,
 ## 95% confidence intervals: Likelihood-based statistic
 ## Coefficients:
 ##            Estimate Std.Error     lbound     ubound z value Pr(&gt;|z|)
-## Tau2_1_1 3.6582e-02        NA 4.0001e-06 1.7650e-01      NA       NA
+## Tau2_1_1 3.6582e-02        NA 9.9815e-11 1.7650e-01      NA       NA
 ## 
 ## Number of studies (or clusters): 20
 ## Number of observed statistics: 18
@@ -249,5 +248,5 @@ summary( reml(y=yi, v=vi, x=weeks, intervals.type=&quot;LB&quot;,
 </code></pre>
 
 
-<hr><div align="center">[Package <em>metaSEM</em> version 0.9-2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
 </body></html>
