--- a/manual/Jaramillo05.html
+++ b/manual/Jaramillo05.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>R: Dataset from Jaramillo, Mulki &amp; Marshall (2005)</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="R.css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Dataset from Jaramillo, Mulki &amp; Marshall (2005)</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="R.css" />
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/styles/github.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/highlight.min.js"></script>
@@ -9,7 +8,7 @@
 <script>hljs.initHighlightingOnLoad();</script>
 </head><body>
 
-<table width="100%" summary="page for Jaramillo05 {metaSEM}"><tr><td>Jaramillo05 {metaSEM}</td><td align="right">R Documentation</td></tr></table>
+<table width="100%" summary="page for Jaramillo05 {metaSEM}"><tr><td>Jaramillo05 {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
 <h2>Dataset from Jaramillo, Mulki &amp; Marshall (2005)
 </h2>
@@ -60,7 +59,7 @@ job performance</p>
 
 <h3>Source</h3>
 
-<p>Jaramillo, F., Mulki, J. P., &amp; Marshall, G. W. (2005). A meta-analysis of the relationship between organizational commitment and salesperson job performance: 25 years of research. <EM>Journal of Business Research</EM>, <B>58(6)</B>, 705-714. doi:10.1016/j.jbusres.2003.10.004
+<p>Jaramillo, F., Mulki, J. P., &amp; Marshall, G. W. (2005). A meta-analysis of the relationship between organizational commitment and salesperson job performance: 25 years of research. <em>Journal of Business Research</em>, <b>58(6)</b>, 705-714. doi:10.1016/j.jbusres.2003.10.004
 </p>
 
 
@@ -153,12 +152,12 @@ summary(meta(r, r_v, x=IDV, data=Jaramillo05))
 ## 95% confidence intervals: z statistic approximation
 ## Coefficients:
 ##               Estimate   Std.Error      lbound      ubound z value
-## Intercept1  0.29409958  0.08166840  0.13403246  0.45416670  3.6011
+## Intercept1  0.29409958  0.08166841  0.13403244  0.45416672  3.6011
 ## Slope1_1   -0.00132138  0.00097695 -0.00323617  0.00059341 -1.3526
 ## Tau2_1_1    0.01634054  0.00402026  0.00846097  0.02422010  4.0645
 ##             Pr(&gt;|z|)    
 ## Intercept1 0.0003168 ***
-## Slope1_1   0.1761987    
+## Slope1_1   0.1761988    
 ## Tau2_1_1   4.813e-05 ***
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
@@ -183,5 +182,5 @@ summary(meta(r, r_v, x=IDV, data=Jaramillo05))
 </code></pre>
 
 
-<hr><div align="center">[Package <em>metaSEM</em> version 0.9-2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
 </body></html>
