--- a/manual/homoStat.html
+++ b/manual/homoStat.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>R: Test the Homogeneity of Effect Sizes</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="R.css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Test the Homogeneity of Effect Sizes</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="R.css" />
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/styles/github.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/highlight.min.js"></script>
@@ -9,7 +8,7 @@
 <script>hljs.initHighlightingOnLoad();</script>
 </head><body>
 
-<table width="100%" summary="page for homoStat {metaSEM}"><tr><td>homoStat {metaSEM}</td><td align="right">R Documentation</td></tr></table>
+<table width="100%" summary="page for homoStat {metaSEM}"><tr><td>homoStat {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
 <h2>Test the Homogeneity of Effect Sizes
 </h2>
@@ -84,14 +83,14 @@ hypothesis.</p>
 <h3>References</h3>
 
 <p>Becker, B. J. (1992). Using results from replicated studies to
-estimate linear models. <EM>Journal of Educational Statistics</EM>,
-<B>17</B>, 341-362. 
+estimate linear models. <em>Journal of Educational Statistics</em>,
+<b>17</b>, 341-362. 
 </p>
 <p>Cheung, M. W.-L. (2010). Fixed-effects meta-analyses as multiple-group
-structural equation models. <EM>Structural Equation Modeling</EM>,
-<B>17</B>, 481-509.
+structural equation models. <em>Structural Equation Modeling</em>,
+<b>17</b>, 481-509.
 </p>
-<p>Cochran, W. G. (1954). The combination of estimates from different experiments. <EM>Biometrics</EM>, <B>10</B>, 101-129.
+<p>Cochran, W. G. (1954). The combination of estimates from different experiments. <em>Biometrics</em>, <b>10</b>, 101-129.
 </p>
 
 
@@ -133,5 +132,5 @@ structural equation models. <EM>Structural Equation Modeling</EM>,
 </code></pre>
 
 
-<hr><div align="center">[Package <em>metaSEM</em> version 0.9-2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
 </body></html>
