--- a/manual/issp05.html
+++ b/manual/issp05.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>R: Data Set from ISSP (2005)</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="R.css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Data Set from ISSP (2005)</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="R.css" />
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/styles/github.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/highlight.min.js"></script>
@@ -9,7 +8,7 @@
 <script>hljs.initHighlightingOnLoad();</script>
 </head><body>
 
-<table width="100%" summary="page for issp05 {metaSEM}"><tr><td>issp05 {metaSEM}</td><td align="right">R Documentation</td></tr></table>
+<table width="100%" summary="page for issp05 {metaSEM}"><tr><td>issp05 {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
 <h2>Data Set from ISSP (2005) 
 </h2>
@@ -20,10 +19,10 @@
 were extracted from the International Social Survey Programme 2005:
 Work Orientation III (ISSP, 2005). Seven variables were selected for
 demonstration purposes. They were grouped into three constructs:
-<EM>Importance of Job Prospects</EM> measured by job security (JP1),
-high income (JP2), and opportunity for advancement (JP3); <EM>Importance
-of Job Autonomy</EM> measured by work independently (JA1) and decide time
-of work (JA2); and <EM>Importance of Contributions to Society</EM> measured by help other
+<em>Importance of Job Prospects</em> measured by job security (JP1),
+high income (JP2), and opportunity for advancement (JP3); <em>Importance
+of Job Autonomy</em> measured by work independently (JA1) and decide time
+of work (JA2); and <em>Importance of Contributions to Society</em> measured by help other
 people (CS1) and a job useful to society (CS2).
 </p>
 
@@ -55,7 +54,7 @@ people (CS1) and a job useful to society (CS2).
 
 <h3>Source</h3>
 
-<p>ISSP Research Group (2007): <EM>International Social Survey Programme 2005: Work Orientation III (ISSP 2005)</EM>. GESIS Data Archive, Cologne. ZA4350 Data file Version 1.0.0, doi:10.4232/1.4350</p>
+<p>ISSP Research Group (2007): <em>International Social Survey Programme 2005: Work Orientation III (ISSP 2005)</em>. GESIS Data Archive, Cologne. ZA4350 Data file Version 1.0.0, doi:10.4232/1.4350</p>
 
 
 <h3>See Also</h3>
@@ -81,27 +80,27 @@ summary(fixed1)
 ## 
 ## Coefficients:
 ##         Estimate Std.Error z value  Pr(&gt;|z|)    
-## S[1,2] 0.3458559 0.0043977  78.644 &lt; 2.2e-16 ***
-## S[1,3] 0.2957112 0.0045568  64.894 &lt; 2.2e-16 ***
-## S[1,4] 0.1451609 0.0048899  29.686 &lt; 2.2e-16 ***
-## S[1,5] 0.0902536 0.0049431  18.258 &lt; 2.2e-16 ***
-## S[1,6] 0.2058963 0.0047699  43.166 &lt; 2.2e-16 ***
-## S[1,7] 0.2178554 0.0047443  45.919 &lt; 2.2e-16 ***
-## S[2,3] 0.4039985 0.0041683  96.922 &lt; 2.2e-16 ***
-## S[2,4] 0.1941410 0.0047964  40.477 &lt; 2.2e-16 ***
-## S[2,5] 0.1905028 0.0047948  39.731 &lt; 2.2e-16 ***
-## S[2,6] 0.1348611 0.0048970  27.539 &lt; 2.2e-16 ***
-## S[2,7] 0.1432354 0.0048860  29.316 &lt; 2.2e-16 ***
-## S[3,4] 0.2780699 0.0046184  60.209 &lt; 2.2e-16 ***
-## S[3,5] 0.1882148 0.0048162  39.080 &lt; 2.2e-16 ***
-## S[3,6] 0.2530858 0.0046830  54.044 &lt; 2.2e-16 ***
-## S[3,7] 0.2500482 0.0046882  53.335 &lt; 2.2e-16 ***
-## S[4,5] 0.3628187 0.0043416  83.567 &lt; 2.2e-16 ***
-## S[4,6] 0.3779795 0.0042881  88.147 &lt; 2.2e-16 ***
-## S[4,7] 0.3178031 0.0044916  70.755 &lt; 2.2e-16 ***
-## S[5,6] 0.2647941 0.0046390  57.080 &lt; 2.2e-16 ***
-## S[5,7] 0.2541330 0.0046696  54.423 &lt; 2.2e-16 ***
-## S[6,7] 0.6623118 0.0028155 235.237 &lt; 2.2e-16 ***
+## S[1,2] 0.3458561 0.0043977  78.645 &lt; 2.2e-16 ***
+## S[1,3] 0.2957112 0.0045567  64.895 &lt; 2.2e-16 ***
+## S[1,4] 0.1451610 0.0048898  29.686 &lt; 2.2e-16 ***
+## S[1,5] 0.0902536 0.0049431  18.259 &lt; 2.2e-16 ***
+## S[1,6] 0.2058964 0.0047699  43.166 &lt; 2.2e-16 ***
+## S[1,7] 0.2178555 0.0047442  45.920 &lt; 2.2e-16 ***
+## S[2,3] 0.4039986 0.0041682  96.925 &lt; 2.2e-16 ***
+## S[2,4] 0.1941410 0.0047962  40.478 &lt; 2.2e-16 ***
+## S[2,5] 0.1905029 0.0047946  39.732 &lt; 2.2e-16 ***
+## S[2,6] 0.1348611 0.0048969  27.540 &lt; 2.2e-16 ***
+## S[2,7] 0.1432354 0.0048858  29.316 &lt; 2.2e-16 ***
+## S[3,4] 0.2780700 0.0046183  60.211 &lt; 2.2e-16 ***
+## S[3,5] 0.1882149 0.0048160  39.081 &lt; 2.2e-16 ***
+## S[3,6] 0.2530859 0.0046828  54.045 &lt; 2.2e-16 ***
+## S[3,7] 0.2500483 0.0046881  53.337 &lt; 2.2e-16 ***
+## S[4,5] 0.3628188 0.0043414  83.571 &lt; 2.2e-16 ***
+## S[4,6] 0.3779796 0.0042879  88.151 &lt; 2.2e-16 ***
+## S[4,7] 0.3178032 0.0044914  70.758 &lt; 2.2e-16 ***
+## S[5,6] 0.2647942 0.0046388  57.082 &lt; 2.2e-16 ***
+## S[5,7] 0.2541331 0.0046694  54.425 &lt; 2.2e-16 ***
+## S[6,7] 0.6623120 0.0028154 235.247 &lt; 2.2e-16 ***
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
 ## 
@@ -179,33 +178,33 @@ summary(fixed2)
 ## f1x2     0.64077        NA 0.63084 0.65074      NA       NA
 ## f1x3     0.66365        NA 0.65392 0.67340      NA       NA
 ## f2x4     0.69218        NA 0.68122 0.70326      NA       NA
-## f2x5     0.53313        NA 0.52284 0.54343      NA       NA
-## f3x6     0.84929        NA 0.84152 0.85714      NA       NA
+## f2x5     0.53312        NA 0.52284 0.54342      NA       NA
+## f3x6     0.84930        NA 0.84152 0.85714      NA       NA
 ## f3x7     0.77875        NA 0.77098 0.78652      NA       NA
 ## corf2f1  0.52612        NA 0.51176 0.54055      NA       NA
 ## corf3f1  0.42027        NA 0.40783 0.43269      NA       NA
-## corf3f2  0.63542        NA 0.62325 0.64765      NA       NA
+## corf3f2  0.63541        NA 0.62325 0.64765      NA       NA
 ## 
 ## Goodness-of-fit indices:
 ##                                                 Value
 ## Sample size                                40596.0000
-## Chi-square of target model                  1707.9414
+## Chi-square of target model                  1707.9434
 ## DF of target model                            11.0000
 ## p value of target model                        0.0000
 ## Number of constraints imposed on &quot;Smatrix&quot;     0.0000
 ## DF manually adjusted                           0.0000
-## Chi-square of independence model           75158.3861
+## Chi-square of independence model           75172.1226
 ## DF of independence model                      21.0000
 ## RMSEA                                          0.0616
 ## SRMR                                           0.0375
 ## TLI                                            0.9569
 ## CFI                                            0.9774
-## AIC                                         1685.9414
-## BIC                                         1591.2158
+## AIC                                         1685.9434
+## BIC                                         1591.2177
 ## OpenMx status1: 0 (&quot;0&quot; or &quot;1&quot;: The optimization is considered fine.
 ## Other values indicate problems.)
 </code></pre>
 
 
-<hr><div align="center">[Package <em>metaSEM</em> version 0.9-2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
 </body></html>
