--- a/manual/meta3.html
+++ b/manual/meta3.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>R: Three-Level Univariate Meta-Analysis with Maximum Likelihood...</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="R.css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Three-Level Univariate Meta-Analysis with Maximum Likelihood...</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
 
-<table width="100%" summary="page for meta3 {metaSEM}"><tr><td>meta3 {metaSEM}</td><td align="right">R Documentation</td></tr></table>
+<table width="100%" summary="page for meta3 {metaSEM}"><tr><td>meta3 {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
 <h2>Three-Level Univariate Meta-Analysis with Maximum Likelihood Estimation
 </h2>
@@ -194,7 +193,7 @@ suppressed. Argument to be passed to <code><a href="../../OpenMx/html/mxRun.html
 
 <h3>Details</h3>
 
-<p align="center"><i>y_{ij} = &beta;_0 + \mathbf{&beta;'}*\mathbf{x}_{ij} + u_{(2)ij} + u_{(3)j} + e_{ij}
+<p style="text-align: center;"><i>y_{ij} = &beta;_0 + \mathbf{&beta;'}*\mathbf{x}_{ij} + u_{(2)ij} + u_{(3)j} + e_{ij}
   </i></p>
 <p> where <i>y_{ij}</i> is the effect size for the ith study in the jth cluster,
 <i>&beta;_0</i> is the intercept, <i>\mathbf{&beta;}</i> is the
@@ -227,18 +226,18 @@ estimation problems.
 
 <h3>References</h3>
 
-<p>Cheung, M. W.-L. (2014). Modeling dependent effect sizes with three-level meta-analyses: A structural equation modeling approach. <EM>Psychological Methods</EM>, <B>19</B>, 211-229.
+<p>Cheung, M. W.-L. (2014). Modeling dependent effect sizes with three-level meta-analyses: A structural equation modeling approach. <em>Psychological Methods</em>, <b>19</b>, 211-229.
 </p>
-<p>Enders, C. K. (2010). <EM>Applied missing data analysis</EM>. New York:
+<p>Enders, C. K. (2010). <em>Applied missing data analysis</em>. New York:
 Guilford Press.
 </p>
 <p>Graham, J. (2003). Adding missing-data-relevant variables to
-FIML-based structural equation models. <EM>Structural Equation
-Modeling: A Multidisciplinary Journal</EM>, <B>10(1)</B>, 80-100.
+FIML-based structural equation models. <em>Structural Equation
+Modeling: A Multidisciplinary Journal</em>, <b>10(1)</b>, 80-100.
 </p>
 <p>Konstantopoulos, S. (2011). Fixed effects and variance components
-estimation in three-level meta-analysis. <EM>Research Synthesis
-Methods</EM>, <B>2</B>, 61-76.
+estimation in three-level meta-analysis. <em>Research Synthesis
+Methods</em>, <b>2</b>, 61-76.
 </p>
 
 
@@ -247,5 +246,5 @@ Methods</EM>, <B>2</B>, 61-76.
 <p><code><a href="reml3.html">reml3</a></code>, <code><a href="Cooper03.html">Cooper03</a></code>, <code><a href="Bornmann07.html">Bornmann07</a></code>
 </p>
 
-<hr><div align="center">[Package <em>metaSEM</em> version 0.9-2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
 </body></html>
