--- a/manual/metaSEM-package.html
+++ b/manual/metaSEM-package.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>R: Meta-Analysis using Structural Equation Modeling</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="R.css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Meta-Analysis using Structural Equation Modeling</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
 
-<table width="100%" summary="page for metaSEM-package {metaSEM}"><tr><td>metaSEM-package {metaSEM}</td><td align="right">R Documentation</td></tr></table>
+<table width="100%" summary="page for metaSEM-package {metaSEM}"><tr><td>metaSEM-package {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
 <h2>Meta-Analysis using Structural Equation Modeling
 </h2>
@@ -24,31 +23,31 @@ correlation/covariance matrices.
 
 <table summary="Rd table">
 <tr>
- <td align="left">
-Package: </td><td align="left"> metaSEM</td>
+ <td style="text-align: left;">
+Package: </td><td style="text-align: left;"> metaSEM</td>
 </tr>
 <tr>
- <td align="left">
-Type: </td><td align="left"> Package</td>
+ <td style="text-align: left;">
+Type: </td><td style="text-align: left;"> Package</td>
 </tr>
 <tr>
- <td align="left">
-Version: </td><td align="left"> 0.9-2</td>
+ <td style="text-align: left;">
+Version: </td><td style="text-align: left;"> 0.9.3-1</td>
 </tr>
 <tr>
- <td align="left">
-Date: </td><td align="left"> 2015-01-23</td>
+ <td style="text-align: left;">
+Date: </td><td style="text-align: left;"> 2015-05-12</td>
 </tr>
 <tr>
- <td align="left">
-License: </td><td align="left"> GPL (&gt;=2)</td>
+ <td style="text-align: left;">
+License: </td><td style="text-align: left;"> GPL (&gt;=2)</td>
 </tr>
 <tr>
- <td align="left">
-LazyLoad: </td><td align="left"> yes</td>
+ <td style="text-align: left;">
+LazyLoad: </td><td style="text-align: left;"> yes</td>
 </tr>
 <tr>
- <td align="left">
+ <td style="text-align: left;">
 </td>
 </tr>
 
@@ -66,30 +65,30 @@ LazyLoad: </td><td align="left"> yes</td>
 
 <h3>References</h3>
 
-<p>Cheung, M. W.-L. (2008). A model for integrating fixed-, random-, and mixed-effects meta-analyses into structural equation modeling. <EM>Psychological Methods</EM>, <B>13</B>, 182-202. 
+<p>Cheung, M. W.-L. (2008). A model for integrating fixed-, random-, and mixed-effects meta-analyses into structural equation modeling. <em>Psychological Methods</em>, <b>13</b>, 182-202. 
 </p>
-<p>Cheung, M. W.-L. (2009). Constructing approximate confidence intervals for parameters with structural equation models. <EM>Structural Equation Modeling</EM>, <B>16</B>, 267-294.
+<p>Cheung, M. W.-L. (2009). Constructing approximate confidence intervals for parameters with structural equation models. <em>Structural Equation Modeling</em>, <b>16</b>, 267-294.
 </p>
-<p>Cheung, M. W.-L. (2010). Fixed-effects meta-analyses as multiple-group structural equation models. <EM>Structural Equation Modeling</EM>, <B>17</B>, 481-509.
+<p>Cheung, M. W.-L. (2010). Fixed-effects meta-analyses as multiple-group structural equation models. <em>Structural Equation Modeling</em>, <b>17</b>, 481-509.
 </p>
-<p>Cheung, M. W.-L. (2013). Implementing restricted maximum likelihood estimation in structural equation models. <EM>Structural Equation Modeling</EM>, <B>20</B>, 157-167. 
+<p>Cheung, M. W.-L. (2013). Implementing restricted maximum likelihood estimation in structural equation models. <em>Structural Equation Modeling</em>, <b>20</b>, 157-167. 
 </p>
-<p>Cheung, M. W.-L. (2013). Multivariate meta-analysis as structural equation models. <EM>Structural Equation Modeling</EM>, <B>20</B>, 429-454.
+<p>Cheung, M. W.-L. (2013). Multivariate meta-analysis as structural equation models. <em>Structural Equation Modeling</em>, <b>20</b>, 429-454.
 </p>
-<p>Cheung, M. W.-L. (2014). Modeling dependent effect sizes with three-level meta-analyses: A structural equation modeling approach. <EM>Psychological Methods</EM>, <B>19</B>, 211-229.
+<p>Cheung, M. W.-L. (2014). Modeling dependent effect sizes with three-level meta-analyses: A structural equation modeling approach. <em>Psychological Methods</em>, <b>19</b>, 211-229.
 </p>
-<p>Cheung, M. W.-L. (2014). Fixed- and random-effects meta-analytic structural equation modeling: Examples and analyses in R. <EM>Behavior Research Methods</EM>, <B>46</B>, 29-40. 
+<p>Cheung, M. W.-L. (2014). Fixed- and random-effects meta-analytic structural equation modeling: Examples and analyses in R. <em>Behavior Research Methods</em>, <b>46</b>, 29-40. 
 </p>
-<p>Cheung, M. W.-L. (2015). metaSEM: An R package for meta-analysis using structural equation modeling. <EM>Frontiers in Psychology</EM>, <B>5</B>, 1521.
+<p>Cheung, M. W.-L. (2015). metaSEM: An R package for meta-analysis using structural equation modeling. <em>Frontiers in Psychology</em>, <b>5</b>, 1521.
 </p>
-<p>Cheung, M. W.-L. (2015). <EM>Meta-Analysis: A Structural Equation Modeling Approach</EM>. Wiley.
+<p>Cheung, M. W.-L. (2015). <em>Meta-Analysis: A Structural Equation Modeling Approach</em>. Wiley.
 </p>
-<p>Cheung, M. W.-L., &amp; Chan, W. (2004). Testing dependent correlation coefficients via structural equation modeling. <EM>Organizational Research Methods</EM>, <B>7</B>, 206-223.
+<p>Cheung, M. W.-L., &amp; Chan, W. (2004). Testing dependent correlation coefficients via structural equation modeling. <em>Organizational Research Methods</em>, <b>7</b>, 206-223.
 </p>
-<p>Cheung, M. W.-L., &amp; Chan, W. (2005). Meta-analytic structural equation modeling: A two-stage approach. <EM>Psychological Methods</EM>, <B>10</B>, 40-64.
+<p>Cheung, M. W.-L., &amp; Chan, W. (2005). Meta-analytic structural equation modeling: A two-stage approach. <em>Psychological Methods</em>, <b>10</b>, 40-64.
 </p>
-<p>Cheung, M. W.-L., &amp; Chan, W. (2009). A two-stage approach to synthesizing covariance matrices in meta-analytic structural equation modeling. <EM>Structural Equation Modeling</EM>, <B>16</B>, 28-53.
+<p>Cheung, M. W.-L., &amp; Chan, W. (2009). A two-stage approach to synthesizing covariance matrices in meta-analytic structural equation modeling. <em>Structural Equation Modeling</em>, <b>16</b>, 28-53.
 </p>
 
-<hr><div align="center">[Package <em>metaSEM</em> version 0.9-2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
 </body></html>
