--- a/manual/plot.meta.html
+++ b/manual/plot.meta.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>R: Plot method for meta objects</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="R.css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Plot method for meta objects</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="R.css" />
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/styles/github.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/highlight.min.js"></script>
@@ -9,7 +8,7 @@
 <script>hljs.initHighlightingOnLoad();</script>
 </head><body>
 
-<table width="100%" summary="page for plot {metaSEM}"><tr><td>plot {metaSEM}</td><td align="right">R Documentation</td></tr></table>
+<table width="100%" summary="page for plot {metaSEM}"><tr><td>plot {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
 <h2>Plot method for meta objects
 
@@ -284,7 +283,7 @@ Duncan Murdoch and E. D. Chow.
 
 <h3>References</h3>
 
-<p>Cheung, M. W.-L. (2013). Multivariate meta-analysis as structural equation models. <EM>Structural Equation Modeling</EM>, <B>20</B>, 429-454.
+<p>Cheung, M. W.-L. (2013). Multivariate meta-analysis as structural equation models. <em>Structural Equation Modeling</em>, <b>20</b>, 429-454.
 </p>
 
 
@@ -310,5 +309,5 @@ Duncan Murdoch and E. D. Chow.
 </code></pre>
 
 
-<hr><div align="center">[Package <em>metaSEM</em> version 0.9-2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
 </body></html>
