--- a/manual/print.html
+++ b/manual/print.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>R: Print Methods for 'tssem1FEM', 'tssem1FEM.cluster',...</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="R.css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Print Methods for 'tssem1FEM', 'tssem1FEM.cluster',...</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
 
-<table width="100%" summary="page for print {metaSEM}"><tr><td>print {metaSEM}</td><td align="right">R Documentation</td></tr></table>
+<table width="100%" summary="page for print {metaSEM}"><tr><td>print {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
 <h2>Print Methods for <code>tssem1FEM</code>, <code>tssem1FEM.cluster</code>,
 <code>tssem1REM</code>, <code>wls</code>, <code>meta</code>, <code>meta3X</code> and <code>reml</code> Objects 
@@ -69,5 +68,5 @@ class <code>wls</code>, class <code>meta</code>, class <code>meta3X</code> or cl
 
 </p>
 
-<hr><div align="center">[Package <em>metaSEM</em> version 0.9-2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
 </body></html>
