--- a/manual/reml.html
+++ b/manual/reml.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>R: Estimate Variance Components with Restricted (Residual)...</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="R.css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Estimate Variance Components with Restricted (Residual)...</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
 
-<table width="100%" summary="page for reml {metaSEM}"><tr><td>reml {metaSEM}</td><td align="right">R Documentation</td></tr></table>
+<table width="100%" summary="page for reml {metaSEM}"><tr><td>reml {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
 <h2>Estimate Variance Components with Restricted (Residual) Maximum
 Likelihood Estimation
@@ -133,7 +132,7 @@ suppressed. Argument to be passed to <code><a href="../../OpenMx/html/mxRun.html
 </p>
 <p>An alternative but equivalent approach is to minimize the
 -2*log-likelihood function: </p>
-<p align="center"><i>
+<p style="text-align: center;"><i>
 	log(det|V+T^2|)+log(det|X'(V+T^2)^{-1}X|)+(y-X&alpha;)'(V+T^2)^{-1}(y-X*&alpha;)</i></p>
 
 <p>where <i>V</i> is the known conditional sampling covariance matrix
@@ -196,15 +195,15 @@ to modify <code>mx.fit@runstate$objectives[[1]]@numObs</code> and <code>mx.fit@r
 <h3>References</h3>
 
 <p>Cheung, M. W.-L. (2013). Implementing restricted maximum likelihood
-estimation in structural equation models. <EM>Structural Equation
-Modeling</EM>, <B>20(1)</B>, 157-167.
+estimation in structural equation models. <em>Structural Equation
+Modeling</em>, <b>20(1)</b>, 157-167.
 </p>
-<p>Mehta, P. D., &amp; Neale, M. C. (2005). People Are Variables Too: Multilevel Structural Equations Modeling. <EM>Psychological
-Methods</EM>, <B>10(3)</B>, 259-284.
+<p>Mehta, P. D., &amp; Neale, M. C. (2005). People Are Variables Too: Multilevel Structural Equations Modeling. <em>Psychological
+Methods</em>, <b>10(3)</b>, 259-284.
 </p>
-<p>Searle, S. R., Casella, G., &amp; McCulloch, C. E. (1992). <EM>Variance components</EM>. New York: Wiley.
+<p>Searle, S. R., Casella, G., &amp; McCulloch, C. E. (1992). <em>Variance components</em>. New York: Wiley.
 </p>
-<p>Viechtbauer, W. (2005). Bias and efficiency of meta-analytic variance estimators in the random-effects model. <EM>Journal of Educational and Behavioral Statistics</EM>, <B>30(3)</B>, 261-293.  
+<p>Viechtbauer, W. (2005). Bias and efficiency of meta-analytic variance estimators in the random-effects model. <em>Journal of Educational and Behavioral Statistics</em>, <b>30(3)</b>, 261-293.  
 </p>
 
 
@@ -214,5 +213,5 @@ Methods</EM>, <B>10(3)</B>, 259-284.
 
 </p>
 
-<hr><div align="center">[Package <em>metaSEM</em> version 0.9-2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
 </body></html>
