--- a/manual/summary.html
+++ b/manual/summary.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>R: Summary Method for tssem1, wls, meta and meta3X Objects</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="R.css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Summary Method for tssem1, wls, meta and meta3X Objects</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
 
-<table width="100%" summary="page for summary {metaSEM}"><tr><td>summary {metaSEM}</td><td align="right">R Documentation</td></tr></table>
+<table width="100%" summary="page for summary {metaSEM}"><tr><td>summary {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
 <h2>Summary Method for tssem1, wls, meta and meta3X Objects
 </h2>
@@ -119,5 +118,5 @@ estimation problems. Users should refer to <a href="http://openmx.psyc.virginia.
 <code><a href="meta.html">meta</a></code>, <code><a href="reml.html">reml</a></code>
 </p>
 
-<hr><div align="center">[Package <em>metaSEM</em> version 0.9-2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
 </body></html>
