--- a/manual/tssem1.html
+++ b/manual/tssem1.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>R: First Stage of the Two-Stage Structural Equation Modeling...</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="R.css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: First Stage of the Two-Stage Structural Equation Modeling...</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
 
-<table width="100%" summary="page for tssem1 {metaSEM}"><tr><td>tssem1 {metaSEM}</td><td align="right">R Documentation</td></tr></table>
+<table width="100%" summary="page for tssem1 {metaSEM}"><tr><td>tssem1 {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
 <h2>First Stage of the Two-Stage Structural Equation Modeling (TSSEM)
 </h2>
@@ -146,15 +145,15 @@ results based for each cluster.
 
 <h3>References</h3>
 
-<p>Cheung, M. W.-L. (2014). Fixed- and random-effects meta-analytic structural equation modeling: Examples and analyses in R. <EM>Behavior Research Methods</EM>, <B>46</B>, 29-40.
+<p>Cheung, M. W.-L. (2014). Fixed- and random-effects meta-analytic structural equation modeling: Examples and analyses in R. <em>Behavior Research Methods</em>, <b>46</b>, 29-40.
 </p>
 <p>Cheung, M. W.-L. (2013). Multivariate meta-analysis as structural
-equation models. <EM>Structural Equation Modeling</EM>, <B>20</B>,
+equation models. <em>Structural Equation Modeling</em>, <b>20</b>,
 429-454.
 </p>
-<p>Cheung, M. W.-L., &amp; Chan, W. (2005). Meta-analytic structural equation modeling: A two-stage approach. <EM>Psychological Methods</EM>, <B>10</B>, 40-64.
+<p>Cheung, M. W.-L., &amp; Chan, W. (2005). Meta-analytic structural equation modeling: A two-stage approach. <em>Psychological Methods</em>, <b>10</b>, 40-64.
 </p>
-<p>Cheung, M. W.-L., &amp; Chan, W. (2009). A two-stage approach to synthesizing covariance matrices in meta-analytic structural equation modeling. <EM>Structural Equation Modeling</EM>, <B>16</B>, 28-53.
+<p>Cheung, M. W.-L., &amp; Chan, W. (2009). A two-stage approach to synthesizing covariance matrices in meta-analytic structural equation modeling. <em>Structural Equation Modeling</em>, <b>16</b>, 28-53.
 </p>
 
 
@@ -164,5 +163,5 @@ equation models. <EM>Structural Equation Modeling</EM>, <B>20</B>,
 <code><a href="Becker92.html">Becker92</a></code>, <code><a href="Digman97.html">Digman97</a></code>, <code><a href="issp89.html">issp89</a></code>, <code><a href="issp05.html">issp05</a></code>
 </p>
 
-<hr><div align="center">[Package <em>metaSEM</em> version 0.9-2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
 </body></html>
