--- a/manual/vcov.html
+++ b/manual/vcov.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>R: Extract Covariance Matrix Parameter Estimates from Various...</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="R.css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Extract Covariance Matrix Parameter Estimates from Various...</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="R.css" />
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/styles/github.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/highlight.min.js"></script>
@@ -9,7 +8,7 @@
 <script>hljs.initHighlightingOnLoad();</script>
 </head><body>
 
-<table width="100%" summary="page for vcov {metaSEM}"><tr><td>vcov {metaSEM}</td><td align="right">R Documentation</td></tr></table>
+<table width="100%" summary="page for vcov {metaSEM}"><tr><td>vcov {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
 <h2>Extract Covariance Matrix Parameter Estimates from Various Objects
 </h2>
@@ -113,8 +112,8 @@ vcov(model1)
 </code></pre>
 
 <pre><code>##              Intercept1     Tau2_1_1
-## Intercept1 0.0110460925 0.0004852258
-## Tau2_1_1   0.0004852258 0.0054075513
+## Intercept1 0.0110460939 0.0004852251
+## Tau2_1_1   0.0004852251 0.0054075547
 </code></pre>
 
 <pre><code class="r">## Fixed-effects only
@@ -130,9 +129,9 @@ vcov(model1, select=&quot;random&quot;)
 </code></pre>
 
 <pre><code>##             Tau2_1_1
-## Tau2_1_1 0.005407551
+## Tau2_1_1 0.005407555
 </code></pre>
 
 
-<hr><div align="center">[Package <em>metaSEM</em> version 0.9-2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
 </body></html>
