--- a/manual/wls.html
+++ b/manual/wls.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>R: Conduct a Correlation/Covariance Structure Analysis with WLS</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="R.css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Conduct a Correlation/Covariance Structure Analysis with WLS</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="R.css" />
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/styles/github.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/highlight.min.js"></script>
@@ -9,7 +8,7 @@
 <script>hljs.initHighlightingOnLoad();</script>
 </head><body>
 
-<table width="100%" summary="page for wls {metaSEM}"><tr><td>wls {metaSEM}</td><td align="right">R Documentation</td></tr></table>
+<table width="100%" summary="page for wls {metaSEM}"><tr><td>wls {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
 <h2>Conduct a Correlation/Covariance Structure Analysis with WLS
 </h2>
@@ -231,20 +230,20 @@ results for each cluster.
 
 <h3>References</h3>
 
-<p>Bentler, P.M., &amp; Savalei, V. (2010). Analysis of correlation structures: current status and open problems. In Kolenikov, S., Thombs, L., &amp; Steinley, D. (Eds.). <EM>Recent Methodological Developments in Social Science Statistics</EM> (pp. 1-36). Hoboken, NJ: Wiley. 
+<p>Bentler, P.M., &amp; Savalei, V. (2010). Analysis of correlation structures: current status and open problems. In Kolenikov, S., Thombs, L., &amp; Steinley, D. (Eds.). <em>Recent Methodological Developments in Social Science Statistics</em> (pp. 1-36). Hoboken, NJ: Wiley. 
 </p>
-<p>Cheung, M. W.-L. (2010). Fixed-effects meta-analyses as multiple-group structural equation models. <EM>Structural Equation Modeling</EM>, <B>17</B>, 481-509.
+<p>Cheung, M. W.-L. (2010). Fixed-effects meta-analyses as multiple-group structural equation models. <em>Structural Equation Modeling</em>, <b>17</b>, 481-509.
 </p>
-<p>Cheung, M. W.-L. (2014). Fixed- and random-effects meta-analytic structural equation modeling: Examples and analyses in R. <EM>Behavior Research Methods</EM>, <B>46</B>, 29-40.
+<p>Cheung, M. W.-L. (2014). Fixed- and random-effects meta-analytic structural equation modeling: Examples and analyses in R. <em>Behavior Research Methods</em>, <b>46</b>, 29-40.
 </p>
-<p>Cheung, M. W.-L., &amp; Chan, W. (2005). Meta-analytic structural equation modeling: A two-stage approach. <EM>Psychological Methods</EM>, <B>10</B>, 40-64.
+<p>Cheung, M. W.-L., &amp; Chan, W. (2005). Meta-analytic structural equation modeling: A two-stage approach. <em>Psychological Methods</em>, <b>10</b>, 40-64.
 </p>
-<p>Cheung, M. W.-L., &amp; Chan, W. (2009). A two-stage approach to synthesizing covariance matrices in meta-analytic structural equation modeling. <EM>Structural Equation Modeling</EM>, <B>16</B>, 28-53.
+<p>Cheung, M. W.-L., &amp; Chan, W. (2009). A two-stage approach to synthesizing covariance matrices in meta-analytic structural equation modeling. <em>Structural Equation Modeling</em>, <b>16</b>, 28-53.
 </p>
 <p>Joreskog, K. G., Sorbom, D., Du Toit, S., &amp; Du Toit,
-M. (1999). <EM>LISREL 8: New Statistical Features.</EM> Chicago: Scientific Software International.
+M. (1999). <em>LISREL 8: New Statistical Features.</em> Chicago: Scientific Software International.
 </p>
-<p>McArdle, J. J., &amp; MacDonald, R. P. (1984). Some algebraic properties of the Reticular Action Model for moment structures. <EM>British Journal of Mathematical and Statistical Psychology</EM>, <B>37</B>, 234-251. 
+<p>McArdle, J. J., &amp; MacDonald, R. P. (1984). Some algebraic properties of the Reticular Action Model for moment structures. <em>British Journal of Mathematical and Statistical Psychology</em>, <b>37</b>, 234-251. 
 </p>
 
 
@@ -329,7 +328,7 @@ summary(wls.fit1)
 ## a1  0.42159        NA 0.34435 0.50017      NA       NA
 ## a2  0.52376        NA 0.44603 0.60472      NA       NA
 ## a3  0.57092        NA 0.49204 0.65446      NA       NA
-## a4  0.42159        NA 0.34436 0.50018      NA       NA
+## a4  0.42159        NA 0.34435 0.50017      NA       NA
 ## 
 ## Goodness-of-fit indices:
 ##                                                Value
@@ -339,7 +338,7 @@ summary(wls.fit1)
 ## p value of target model                       0.9933
 ## Number of constraints imposed on &quot;Smatrix&quot;    0.0000
 ## DF manually adjusted                          0.0000
-## Chi-square of independence model            207.8699
+## Chi-square of independence model            207.8652
 ## DF of independence model                      6.0000
 ## RMSEA                                         0.0000
 ## SRMR                                          0.0012
@@ -513,13 +512,13 @@ summary(wls.fit3)
 ## Coefficients:
 ##    Estimate Std.Error   lbound   ubound z value  Pr(&gt;|z|)    
 ## a1 0.422193  0.063787 0.297173 0.547212  6.6188 3.621e-11 ***
-## a2 0.523188  0.069694 0.386590 0.659786  7.5069 6.062e-14 ***
-## a3 0.570613  0.074823 0.423963 0.717262  7.6262 2.420e-14 ***
-## a4 0.421946  0.060419 0.303526 0.540366  6.9836 2.877e-12 ***
-## e1 1.321745  0.073423 1.177837 1.465652 18.0017 &lt; 2.2e-16 ***
-## e2 1.326269  0.085075 1.159526 1.493012 15.5895 &lt; 2.2e-16 ***
-## e3 1.474395  0.097523 1.283254 1.665536 15.1185 &lt; 2.2e-16 ***
-## e4 1.121954  0.065237 0.994093 1.249816 17.1983 &lt; 2.2e-16 ***
+## a2 0.523188  0.069693 0.386592 0.659785  7.5070 6.040e-14 ***
+## a3 0.570613  0.074822 0.423964 0.717261  7.6263 2.420e-14 ***
+## a4 0.421946  0.060419 0.303527 0.540365  6.9837 2.876e-12 ***
+## e1 1.321745  0.073421 1.177841 1.465648 18.0022 &lt; 2.2e-16 ***
+## e2 1.326269  0.085073 1.159528 1.493010 15.5897 &lt; 2.2e-16 ***
+## e3 1.474396  0.097521 1.283258 1.665533 15.1188 &lt; 2.2e-16 ***
+## e4 1.121955  0.065236 0.994095 1.249814 17.1984 &lt; 2.2e-16 ***
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
 ## 
@@ -531,7 +530,7 @@ summary(wls.fit3)
 ## p value of target model                       0.9975
 ## Number of constraints imposed on &quot;Smatrix&quot;    0.0000
 ## DF manually adjusted                          0.0000
-## Chi-square of independence model             78.2765
+## Chi-square of independence model             78.2629
 ## DF of independence model                      6.0000
 ## RMSEA                                         0.0000
 ## SRMR                                          0.0006
@@ -544,5 +543,5 @@ summary(wls.fit3)
 </code></pre>
 
 
-<hr><div align="center">[Package <em>metaSEM</em> version 0.9-2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.3-1 <a href="00Index.html">Index</a>]</div>
 </body></html>
